src/generated/WordParserParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class WordParserParser extends antlr.Parser {
    public static readonly SUBJECT = 1;
    public static readonly DIRECT_OBJECT = 2;
    public static readonly INDIRECT_OBJECT = 3;
    public static readonly VERB = 4;
    public static readonly MODIFIER = 5;
    public static readonly META_MODIFIER = 6;
    public static readonly MOOD = 7;
    public static readonly CONJUNCTION = 8;
    public static readonly PRONOUN = 9;
    public static readonly INTENTION = 10;
    public static readonly RULE_start = 0;
    public static readonly RULE_modifier_clause = 1;
    public static readonly RULE_subject_clause = 2;
    public static readonly RULE_verb_clause = 3;
    public static readonly RULE_direct_object_clause = 4;
    public static readonly RULE_intention_clause = 5;
    public static readonly RULE_pronoun_clause = 6;
    public static readonly RULE_entity_clause = 7;
    public static readonly RULE_sentence = 8;

    public static readonly literalNames = [
    ];

    public static readonly symbolicNames = [
        null, "SUBJECT", "DIRECT_OBJECT", "INDIRECT_OBJECT", "VERB", "MODIFIER", 
        "META_MODIFIER", "MOOD", "CONJUNCTION", "PRONOUN", "INTENTION"
    ];
    public static readonly ruleNames = [
        "start", "modifier_clause", "subject_clause", "verb_clause", "direct_object_clause", 
        "intention_clause", "pronoun_clause", "entity_clause", "sentence",
    ];

    public get grammarFileName(): string { return "WordParser.g4"; }
    public get literalNames(): (string | null)[] { return WordParserParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return WordParserParser.symbolicNames; }
    public get ruleNames(): string[] { return WordParserParser.ruleNames; }
    public get serializedATN(): number[] { return WordParserParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, WordParserParser._ATN, WordParserParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public start(): StartContext {
        let localContext = new StartContext(this.context, this.state);
        this.enterRule(localContext, 0, WordParserParser.RULE_start);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 18;
            this.sentence();
            this.state = 19;
            this.match(WordParserParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public modifier_clause(): Modifier_clauseContext;
    public modifier_clause(_p: number): Modifier_clauseContext;
    public modifier_clause(_p?: number): Modifier_clauseContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new Modifier_clauseContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, WordParserParser.RULE_modifier_clause, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            {
            this.state = 22;
            this.match(WordParserParser.MODIFIER);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 28;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    {
                    localContext = new Modifier_clauseContext(parentContext, parentState);
                    this.pushNewRecursionContext(localContext, _startState, WordParserParser.RULE_modifier_clause);
                    this.state = 24;
                    if (!(this.precpred(this.context, 1))) {
                        throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                    }
                    this.state = 25;
                    this.match(WordParserParser.META_MODIFIER);
                    }
                    }
                }
                this.state = 30;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public subject_clause(): Subject_clauseContext {
        let localContext = new Subject_clauseContext(this.context, this.state);
        this.enterRule(localContext, 4, WordParserParser.RULE_subject_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 31;
            this.match(WordParserParser.SUBJECT);
            this.state = 35;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 32;
                this.modifier_clause(0);
                }
                }
                this.state = 37;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public verb_clause(): Verb_clauseContext {
        let localContext = new Verb_clauseContext(this.context, this.state);
        this.enterRule(localContext, 6, WordParserParser.RULE_verb_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 38;
            this.match(WordParserParser.VERB);
            this.state = 42;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 39;
                this.modifier_clause(0);
                }
                }
                this.state = 44;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public direct_object_clause(): Direct_object_clauseContext {
        let localContext = new Direct_object_clauseContext(this.context, this.state);
        this.enterRule(localContext, 8, WordParserParser.RULE_direct_object_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 45;
            this.match(WordParserParser.DIRECT_OBJECT);
            this.state = 49;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 46;
                this.modifier_clause(0);
                }
                }
                this.state = 51;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public intention_clause(): Intention_clauseContext {
        let localContext = new Intention_clauseContext(this.context, this.state);
        this.enterRule(localContext, 10, WordParserParser.RULE_intention_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 52;
            this.match(WordParserParser.INTENTION);
            this.state = 56;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 53;
                this.modifier_clause(0);
                }
                }
                this.state = 58;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public pronoun_clause(): Pronoun_clauseContext {
        let localContext = new Pronoun_clauseContext(this.context, this.state);
        this.enterRule(localContext, 12, WordParserParser.RULE_pronoun_clause);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 59;
            this.match(WordParserParser.PRONOUN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public entity_clause(): Entity_clauseContext {
        let localContext = new Entity_clauseContext(this.context, this.state);
        this.enterRule(localContext, 14, WordParserParser.RULE_entity_clause);
        try {
            this.state = 66;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case WordParserParser.SUBJECT:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 61;
                this.subject_clause();
                }
                break;
            case WordParserParser.VERB:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 62;
                this.verb_clause();
                }
                break;
            case WordParserParser.DIRECT_OBJECT:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 63;
                this.direct_object_clause();
                }
                break;
            case WordParserParser.INTENTION:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 64;
                this.intention_clause();
                }
                break;
            case WordParserParser.PRONOUN:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 65;
                this.pronoun_clause();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sentence(): SentenceContext {
        let localContext = new SentenceContext(this.context, this.state);
        this.enterRule(localContext, 16, WordParserParser.RULE_sentence);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 69;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 68;
                this.entity_clause();
                }
                }
                this.state = 71;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1558) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public override sempred(localContext: antlr.ParserRuleContext | null, ruleIndex: number, predIndex: number): boolean {
        switch (ruleIndex) {
        case 1:
            return this.modifier_clause_sempred(localContext as Modifier_clauseContext, predIndex);
        }
        return true;
    }
    private modifier_clause_sempred(localContext: Modifier_clauseContext | null, predIndex: number): boolean {
        switch (predIndex) {
        case 0:
            return this.precpred(this.context, 1);
        }
        return true;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!WordParserParser.__ATN) {
            WordParserParser.__ATN = new antlr.ATNDeserializer().deserialize(WordParserParser._serializedATN);
        }

        return WordParserParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(WordParserParser.literalNames, WordParserParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return WordParserParser.vocabulary;
    }

    private static readonly decisionsToDFA = WordParserParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class StartContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public sentence(): SentenceContext {
        return this.getRuleContext(0, SentenceContext)!;
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(WordParserParser.EOF, 0)!;
    }
    public override get ruleIndex(): number {
        return WordParserParser.RULE_start;
    }
}


export class Modifier_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public MODIFIER(): antlr.TerminalNode | null {
        return this.getToken(WordParserParser.MODIFIER, 0);
    }
    public modifier_clause(): Modifier_clauseContext | null {
        return this.getRuleContext(0, Modifier_clauseContext);
    }
    public META_MODIFIER(): antlr.TerminalNode | null {
        return this.getToken(WordParserParser.META_MODIFIER, 0);
    }
    public override get ruleIndex(): number {
        return WordParserParser.RULE_modifier_clause;
    }
}


export class Subject_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public SUBJECT(): antlr.TerminalNode {
        return this.getToken(WordParserParser.SUBJECT, 0)!;
    }
    public modifier_clause(): Modifier_clauseContext[];
    public modifier_clause(i: number): Modifier_clauseContext | null;
    public modifier_clause(i?: number): Modifier_clauseContext[] | Modifier_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Modifier_clauseContext);
        }

        return this.getRuleContext(i, Modifier_clauseContext);
    }
    public override get ruleIndex(): number {
        return WordParserParser.RULE_subject_clause;
    }
}


export class Verb_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public VERB(): antlr.TerminalNode {
        return this.getToken(WordParserParser.VERB, 0)!;
    }
    public modifier_clause(): Modifier_clauseContext[];
    public modifier_clause(i: number): Modifier_clauseContext | null;
    public modifier_clause(i?: number): Modifier_clauseContext[] | Modifier_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Modifier_clauseContext);
        }

        return this.getRuleContext(i, Modifier_clauseContext);
    }
    public override get ruleIndex(): number {
        return WordParserParser.RULE_verb_clause;
    }
}


export class Direct_object_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public DIRECT_OBJECT(): antlr.TerminalNode {
        return this.getToken(WordParserParser.DIRECT_OBJECT, 0)!;
    }
    public modifier_clause(): Modifier_clauseContext[];
    public modifier_clause(i: number): Modifier_clauseContext | null;
    public modifier_clause(i?: number): Modifier_clauseContext[] | Modifier_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Modifier_clauseContext);
        }

        return this.getRuleContext(i, Modifier_clauseContext);
    }
    public override get ruleIndex(): number {
        return WordParserParser.RULE_direct_object_clause;
    }
}


export class Intention_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public INTENTION(): antlr.TerminalNode {
        return this.getToken(WordParserParser.INTENTION, 0)!;
    }
    public modifier_clause(): Modifier_clauseContext[];
    public modifier_clause(i: number): Modifier_clauseContext | null;
    public modifier_clause(i?: number): Modifier_clauseContext[] | Modifier_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Modifier_clauseContext);
        }

        return this.getRuleContext(i, Modifier_clauseContext);
    }
    public override get ruleIndex(): number {
        return WordParserParser.RULE_intention_clause;
    }
}


export class Pronoun_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public PRONOUN(): antlr.TerminalNode {
        return this.getToken(WordParserParser.PRONOUN, 0)!;
    }
    public override get ruleIndex(): number {
        return WordParserParser.RULE_pronoun_clause;
    }
}


export class Entity_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public subject_clause(): Subject_clauseContext | null {
        return this.getRuleContext(0, Subject_clauseContext);
    }
    public verb_clause(): Verb_clauseContext | null {
        return this.getRuleContext(0, Verb_clauseContext);
    }
    public direct_object_clause(): Direct_object_clauseContext | null {
        return this.getRuleContext(0, Direct_object_clauseContext);
    }
    public intention_clause(): Intention_clauseContext | null {
        return this.getRuleContext(0, Intention_clauseContext);
    }
    public pronoun_clause(): Pronoun_clauseContext | null {
        return this.getRuleContext(0, Pronoun_clauseContext);
    }
    public override get ruleIndex(): number {
        return WordParserParser.RULE_entity_clause;
    }
}


export class SentenceContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public entity_clause(): Entity_clauseContext[];
    public entity_clause(i: number): Entity_clauseContext | null;
    public entity_clause(i?: number): Entity_clauseContext[] | Entity_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Entity_clauseContext);
        }

        return this.getRuleContext(i, Entity_clauseContext);
    }
    public override get ruleIndex(): number {
        return WordParserParser.RULE_sentence;
    }
}
